[package]
name = "orchestrator_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Server
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }

# DB
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-native-tls"] }

# Serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Env
dotenvy = "0.15.7"
